# docs-langflow-test-application

./: .gitignore  Dockerfile  README.md  pyproject.toml
flows/: pokedex-agent.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: PokemonCard.tsx
frontend/src/services/: api.ts  chatService.ts
frontend/src/types/: pokemon.ts
