[project]
name = "docs-langflow-test-application"
version = "0.1.0"
description = "Langflow test application"
requires-python = ">=3.10,<3.14"
license = "MIT"
readme = "README.md"

dependencies = [
    "langflow>=1.2.0",
    "langchain>=0.1.4",
    "langchain-community>=0.0.16",
    "langchain-core>=0.1.16",
    "langchain-openai>=0.0.3",
    "openai>=1.33.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.1.0"
]

[project.urls]
Repository = "https://github.com/mendonk/docs-langflow-test-application"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.7",
    "mypy>=1.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90",  # McCabe complexity
    "ERA",  # Eradicate commented-out code
    "FIX002",  # Line contains TODO
    "PLR09",  # Too many something (arg, statements, etc)
]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
ignore_missing_imports = true